Closed
Bug 154361
Opened 23 years ago
Closed 23 years ago
Java applet redraw causes chrome problems in Chimera
Categories
(Camino Graveyard :: Plug-ins, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
Chimera0.6
People
(Reporter: stf, Assigned: bnesse)
References
()
Details
Attachments
(2 files)
|
143.63 KB,
image/png
|
Details | |
|
10.93 KB,
patch
|
Details | Diff | Splinter Review |
If you click below vertical scroll bar's thumb to see the bottom of the page,
the applet area is covering the top of the window (menu title, toolbar and
personal bookmark line), that area remains blank if you then scroll up.
That page is also strangely remaining always just as if something was always
downloading, barber poll always animated at bottom right of the window.
Chimera seems to report some problem in console:
Exception in thread "main" The browser wrapper died.
Jun 26 13:01:35 localhost
/Users/stf/Desktop/Navigator.app/Contents/MacOS/Navigator:
kCGErrorIllegalArgument : CGSGetWindowBounds: NULL window
Jun 26 13:01:35 localhost
/Users/stf/Desktop/Navigator.app/Contents/MacOS/Navigator:
kCGErrorIllegalArgument : CGSSetTrackingAreaEnabled: Invalid window
Jun 26 13:01:35 localhost
/Users/stf/Desktop/Navigator.app/Contents/MacOS/Navigator:
kCGErrorIllegalArgument : CGSRemoveTrackingArea: Invalid window
In Mozilla 1.1a that covering does not occurs but when you close the window, you
get a CRASH, Kern protection (MZjavaWdev.log available on request).
A similar problem is also occuring with Chimera with
http://www.gemal.dk/browserspy/javajava.html
however covering different parts of the window frame.
Build 20020625.
Using Chimera/20020625, if I access the URL and then scroll the page down using
the scrollbar area below the elevator, a white area is drawn over some of the
browser chrome. Is that what you're referring to, Stephane? I'll attach a
screenshot.
The page completes loading for me. The Mozilla crashing problem should be filed
as a seperate bug with stack attached, Stephane.
Summary: Java applet corrupt window border and crash Mozilla → Java applet redraw causes chrome problems in Chimera
| Reporter | ||
Comment 3•23 years ago
|
||
greg, yes same white area for me.
Note that I filed the Mozilla crasher as bug 154998.
| Reporter | ||
Comment 6•23 years ago
|
||
http://privacy.net/analyze/
This page has similar redraw problem with a java applet (V0.40 Build 20020711
16.04).
Scroll down, the status bar will disappear, up it's the toolbar.
Updated•23 years ago
|
Target Milestone: --- → Chimera0.6
Comment 8•23 years ago
|
||
*** Bug 169342 has been marked as a duplicate of this bug. ***
Comment 9•23 years ago
|
||
*** Bug 169959 has been marked as a duplicate of this bug. ***
Comment 10•23 years ago
|
||
*** Bug 170118 has been marked as a duplicate of this bug. ***
Comment 11•23 years ago
|
||
*** Bug 170268 has been marked as a duplicate of this bug. ***
Comment 12•23 years ago
|
||
*** Bug 170442 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 13•23 years ago
|
||
The problem here is that we are not setting the plugin clipping rectangle
correctly under Cocoa. The attached patch fixes this for both embeded and full
page plugins. This patch also contains some timer cleanup to help consolidate
the creation and removal of the plugin idle timer.
Comment 14•23 years ago
|
||
Comment on attachment 100740 [details] [diff] [review]
Clipping and timer fixup.
r=beard
Attachment #100740 -
Flags: review+
| Assignee | ||
Comment 15•23 years ago
|
||
Fix checked in. Chris, you may want to re-test any other plugin bugs pertaing to
drawing over the url bar or tabs against this patch.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 17•23 years ago
|
||
*** Bug 158244 has been marked as a duplicate of this bug. ***
Comment 18•23 years ago
|
||
When scrolling the page, the applet still partially paints over the browser's
bookmarks and navigation toolbar. Tested with the 2002-10-02-04 NB under Mac OS
X 10.2.1.
Comment 19•23 years ago
|
||
I tried with the URL I submitted <http://cityguide-deutschland.com/koblenz/
1024x768.html> (the bug was marked as a duplicate of this one) and I still see the applet
fully overpainting the favorites bar.
Besides that the coordinate system inside the applet is shifted vertically.
Just try to move the map using the small overview in the upper right.. Click somewhere
and you'll see that you end up quite a bit north.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
| Assignee | ||
Comment 20•23 years ago
|
||
Chris, yes we still have issues when scrolling applets (and real videos I
believe)... I think there is a bug for that, if not we need one.
Norbert, I think your bug is a special case situation (full page, with an image
overlay of some sort). I have reopened your original bug for this.
Status: REOPENED → RESOLVED
Closed: 23 years ago → 23 years ago
Resolution: --- → FIXED
Comment 21•23 years ago
|
||
Ok, this issue has been fixed in the 2002-10-04-04 build.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•