Fix for bug 154361. Set plugin cliprect correctly for cocoa. r=beard.